--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required(VERSION 3.31)
-project(dungeons)
+project(
+    dungeons 
+    VERSION 0.0 
+    DESCRIPTION "2D Dungeon Crawler" 
+    LANGUAGES C CXX)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 
 find_package(SDL3 REQUIRED)
 include_directories(${SDL3_INCLUDE_DIRS})
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
-add_executable(dungeons common/main.cc)
-target_link_libraries(dungeons SDL3::SDL3)
+add_subdirectory(common)
+add_subdirectory(menu)
