Successful build, blank window

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,6 +1,7 @@
-add_executable(dungeons main.cc)
-target_sources(dungeons PRIVATE sceneManager.cc)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC)
+add_executable(dungeons ${SRC})
+target_compile_definitions(dungeons PUBLIC "PROGRAM_NAME=\"${PROGRAM_NAME}\"")
 
-target_include_directories(dungeons PUBLIC ../include/common)
+target_include_directories(dungeons PRIVATE ../include/common)
 
 target_link_libraries(dungeons menu SDL3)
