--- a/menu/CMakeLists.txt
+++ b/menu/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_library(menu menuScene.cc textButton.cc)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC)
+add_library(menu ${SRC})
 
 target_include_directories(menu PUBLIC ../include/menu)
+target_include_directories(menu PRIVATE ../include/common)
