Window naming and CMake program name macro

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,6 +1,6 @@
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC)
 add_executable(dungeons ${SRC})
-target_compile_definitions(dungeons PUBLIC "PROGRAM_NAME=\"${PROGRAM_NAME}\"")
+target_compile_definitions(dungeons PRIVATE PROGRAM_NAME=\"${CMAKE_PROJECT_NAME}\")
 
 target_include_directories(dungeons PRIVATE ../include/common)
 
