TextHelper and clang-format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,14 @@ project(
     DESCRIPTION "2D Dungeon Crawler" 
     LANGUAGES C CXX)
 
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 
 find_package(SDL3 REQUIRED)
 include_directories(${SDL3_INCLUDE_DIRS})
+
+find_package(SDL3_ttf REQUIRED)
+include_directories(${SDL3_ttf_INCLUDE_DIRS})
 
 add_subdirectory(common)
 add_subdirectory(menu)
